<resources>
    <string name="app_name">Call Log Widget</string>

    <string name="outgoing">Outgoing</string>
    <string name="received">Received</string>
    <string name="missed">Missed</string>
    <string name="rejected">Rejected</string>

    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">View the call log on your home screen</string>
    <string name="call_log_is_empty">Call log is empty</string>
    <string name="voicemail">Voicemail</string>
    <string name="blocked">Blocked</string>
</resources>